--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 
         <ul>
             <li><a href="#">home</a></li>
-            <li><a href="#">product</a></li>
-            <li><a href="#">service</a></li>
-            <li><a href="#">gallery</a></li>
-            <li><a href="#">about</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Skill</a></li>
+            <li><a href="#">Portfolio</a></li>
+            <li><a href="#">Contact</a></li>
         </ul>
 
         <div class="menu-toggle">
@@ -34,7 +34,7 @@
 
     <div class="container">
         <div class="perkenalan">
-            <h1>M.Fabregas G.S</h1>
+            <h1>I'M M.Fabregas G.S</h1>
             <p>Perkenalkan nama saya muhammad fabregas saya mahasiswa unpas </p>
             <div class="icon">
                 <a href="#"><i class="ri-facebook-circle-line"></i></a>
@@ -46,101 +46,197 @@
         <div class="foto">
             <img src="foto.jpg" alt="">
         </div>
+        <svg class="blob" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+            <path fill="#ff5500" fill-opacity="1"
+                d="M0,192L21.8,186.7C43.6,181,87,171,131,160C174.5,149,218,139,262,149.3C305.5,160,349,192,393,186.7C436.4,181,480,139,524,154.7C567.3,171,611,245,655,272C698.2,299,742,277,785,266.7C829.1,256,873,256,916,256C960,256,1004,256,1047,245.3C1090.9,235,1135,213,1178,181.3C1221.8,149,1265,107,1309,112C1352.7,117,1396,171,1418,197.3L1440,224L1440,320L1418.2,320C1396.4,320,1353,320,1309,320C1265.5,320,1222,320,1178,320C1134.5,320,1091,320,1047,320C1003.6,320,960,320,916,320C872.7,320,829,320,785,320C741.8,320,698,320,655,320C610.9,320,567,320,524,320C480,320,436,320,393,320C349.1,320,305,320,262,320C218.2,320,175,320,131,320C87.3,320,44,320,22,320L0,320Z">
+            </path>
+        </svg>
     </div>
 
-    <svg class="blob" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-        <path fill="#ff5500" fill-opacity="1"
-            d="M0,192L21.8,186.7C43.6,181,87,171,131,160C174.5,149,218,139,262,149.3C305.5,160,349,192,393,186.7C436.4,181,480,139,524,154.7C567.3,171,611,245,655,272C698.2,299,742,277,785,266.7C829.1,256,873,256,916,256C960,256,1004,256,1047,245.3C1090.9,235,1135,213,1178,181.3C1221.8,149,1265,107,1309,112C1352.7,117,1396,171,1418,197.3L1440,224L1440,320L1418.2,320C1396.4,320,1353,320,1309,320C1265.5,320,1222,320,1178,320C1134.5,320,1091,320,1047,320C1003.6,320,960,320,916,320C872.7,320,829,320,785,320C741.8,320,698,320,655,320C610.9,320,567,320,524,320C480,320,436,320,393,320C349.1,320,305,320,262,320C218.2,320,175,320,131,320C87.3,320,44,320,22,320L0,320Z">
-        </path>
-    </svg>
-
-    <div class="about" id="about">
-        <h2>about me</h2>
+    <div class="about">
+        <svg class="marker" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
+            <path fill="#000000"
+                d="M14.7,-26.2C21.3,-21.6,30.4,-22.2,36.9,-18.7C43.4,-15.2,47.2,-7.6,49.6,1.4C52,10.4,52.9,20.7,46.7,24.7C40.4,28.6,27,26.1,18.1,26.4C9.1,26.7,4.5,29.7,-4.7,37.8C-13.9,45.9,-27.8,59,-31.3,55.6C-34.7,52.1,-27.8,32.1,-31.3,20C-34.8,8,-48.8,4,-53.5,-2.7C-58.2,-9.4,-53.6,-18.9,-44.6,-21.3C-35.5,-23.8,-22,-19.3,-13.9,-23C-5.7,-26.7,-2.8,-38.7,0.6,-39.7C4,-40.7,8.1,-30.9,14.7,-26.2Z"
+                transform="translate(100 100)" />
+        </svg>
         <div class="biodata">
-            <p>nama : M.Fabregas G.S</p>
-            <p>tem/tang lahir : Bandung 22 oktober 2005</p>
-            <p>alamat : JL.kp sukatinggal cimahi tengah</p>
-            <p>no hp : 085819542978</p>
+            <p>About me</p>
+            <p>Nama : Muhammad fabregas garda samudra</p>
+            <p>tempat/tanggal lahir : 22-10-2005</p>
+            <p>Alamat : jl.kp sukatinggal kec baros</p>
+        </div>
+        <div class="gambar">
+            <div class="download">
+                <img src="download.jpg" alt="">
+            </div>
         </div>
     </div>
-    <svg class="blob1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-        <path fill="#FF5500" fill-opacity="1"
-            d="M0,32L26.7,80C53.3,128,107,224,160,240C213.3,256,267,192,320,186.7C373.3,181,427,235,480,234.7C533.3,235,587,181,640,144C693.3,107,747,85,800,85.3C853.3,85,907,107,960,138.7C1013.3,171,1067,213,1120,224C1173.3,235,1227,213,1280,186.7C1333.3,160,1387,128,1413,112L1440,96L1440,0L1413.3,0C1386.7,0,1333,0,1280,0C1226.7,0,1173,0,1120,0C1066.7,0,1013,0,960,0C906.7,0,853,0,800,0C746.7,0,693,0,640,0C586.7,0,533,0,480,0C426.7,0,373,0,320,0C266.7,0,213,0,160,0C106.7,0,53,0,27,0L0,0Z">
-        </path>
-    </svg>
 
-    <section>
-        <div class="skill">
-            <div class="pemrograman">
+
+    <!--skill-->
+
+    <section class="skills" id="skills">
+        <svg class="blob1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+            <path fill=" #ff5500" fill-opacity="1"
+                d="M0,224L60,234.7C120,245,240,267,360,245.3C480,224,600,160,720,144C840,128,960,160,1080,165.3C1200,171,1320,149,1380,138.7L1440,128L1440,0L1380,0C1320,0,1200,0,1080,0C960,0,840,0,720,0C600,0,480,0,360,0C240,0,120,0,60,0L0,0Z">
+            </path>
+        </svg>
+        <div class="skills-content">
+            <div class="bahasa">
                 <h2>Skills</h2>
-                <div class="bahasa">
-                    <i class="ri-javascript-fill"></i>
-                    <i class="ri-css3-fill"></i>
-                    <i class="ri-html5-fill"></i>
-                </div>
-                <div class="progess">
-                    <div class="skil">
-                        <div class="details">
-                            <span>Javascript</span>
-                            <span class="js-bar">10%</span>
-                        </div>
-                        <div class="bar">
-                            <div id="js-bar"></div>
-                        </div>
+                <i class="ri-javascript-fill"></i>
+                <i class="ri-css3-fill"></i>
+                <i class="ri-html5-fill"></i>
+            </div>
+
+            <div class="pemrograman">
+                <div class="skil">
+                    <div class="details">
+                        <span>Javascript</span>
+                        <span class="js-bar">10%</span>
                     </div>
-                    <div class="skil">
-                        <div class="details">
-                            <span>CSS</span>
-                            <span class="css-bar">30%</span>
-                        </div>
-                        <div class="bar">
-                            <div id="css-bar"></div>
-                        </div>
-                    </div>
-                    <div class="skil">
-                        <div class="details">
-                            <span>HTML</span>
-                            <span class="html-bar">70%</span>
-                        </div>
-                        <div class="bar">
-                            <div id="html-bar"></div>
-                        </div>
+                    <div class="bar">
+                        <div id="js-bar"></div>
                     </div>
                 </div>
+                <div class="skil">
+                    <div class="details">
+                        <span>CSS</span>
+                        <span class="css-bar">30%</span>
+                    </div>
+                    <div class="bar">
+                        <div id="css-bar"></div>
+                    </div>
+                </div>
+                <div class="skil">
+                    <div class="details">
+                        <span>HTML</span>
+                        <span class="html-bar">70%</span>
+                    </div>
+                    <div class="bar">
+                        <div id="html-bar"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="soft-content">
+            <div class="brain">
+                <h2>Softskill</h2>
+                <i class="ri-brain-fill"></i>
+                <i class="ri-puzzle-fill"></i>
+                <i class="ri-speak-line"></i>
             </div>
             <div class="softskill">
-                <h2>Skills</h2>
-                <div class="progess">
-                    <div class="skil">
-                        <div class="details">
-                            <span>komunikasi</span>
-                            <span class="js-bar">10%</span>
-                        </div>
-                        <div class="bar">
-                            <div id="js-bar"></div>
-                        </div>
+                <div class="skil">
+                    <div class="details">
+                        <span>Problem-solving</span>
+                        <span class="ps-bar">10%</span>
                     </div>
-                    <div class="skil">
-                        <div class="details">
-                            <span>Problem Solving</span>
-                            <span class="css-bar">30%</span>
-                        </div>
-                        <div class="bar">
-                            <div id="css-bar"></div>
-                        </div>
+                    <div class="bar">
+                        <div id="ps-bar"></div>
                     </div>
-                    <div class="skil">
-                        <div class="details">
-                            <span>Kerja tim</span>
-                            <span class="html-bar">70%</span>
-                        </div>
-                        <div class="bar">
-                            <div id="html-bar"></div>
-                        </div>
+                </div>
+                <div class="skil">
+                    <div class="details">
+                        <span>Analisis</span>
+                        <span class="analis-bar">5%</span>
+                    </div>
+                    <div class="bar">
+                        <div id="analis-bar"></div>
+                    </div>
+                </div>
+                <div class="skil">
+                    <div class="details">
+                        <span>Komunikasi</span>
+                        <span class="kom-bar">5%</span>
+                    </div>
+                    <div class="bar">
+                        <div id="kom-bar"></div>
                     </div>
                 </div>
             </div>
-        </div>
     </section>
 
+
+    <div class="portfolio">
+        <h1>portfolio</h1>
+        <div class="portfolio-content">
+            <div class="card">
+                <div class="sc"><img src="Screenshot 2023-12-14 183757.png" alt=""></div>
+                <div class="text">
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati voluptate placeat, explicabo
+                        ullam nihil deserunt in rerum tenetur sapiente distinctio? Eum iste facilis nisi autem deserunt
+                        animi repellendus adipisci possimus!</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="sc"><img src="Screenshot 2023-12-14 183757.png" alt=""></div>
+                <div class="text">
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati voluptate placeat, explicabo
+                        ullam nihil deserunt in rerum tenetur sapiente distinctio? Eum iste facilis nisi autem deserunt
+                        animi repellendus adipisci possimus!</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="sc"><img src="Screenshot 2023-12-14 183757.png" alt=""></div>
+                <div class="text">
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati voluptate placeat, explicabo
+                        ullam nihil deserunt in rerum tenetur sapiente distinctio? Eum iste facilis nisi autem deserunt
+                        animi repellendus adipisci possimus!</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="sc"><img src="Screenshot 2023-12-14 183757.png" alt=""></div>
+                <div class="text">
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati voluptate placeat, explicabo
+                        ullam nihil deserunt in rerum tenetur sapiente distinctio? Eum iste facilis nisi autem deserunt
+                        animi repellendus adipisci possimus!</p>
+                </div>
+            </div>
+        </div>
+        <svg class="blob2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+            <path fill="#ffff00" fill-opacity="1"
+                d="M0,224L60,234.7C120,245,240,267,360,245.3C480,224,600,160,720,144C840,128,960,160,1080,165.3C1200,171,1320,149,1380,138.7L1440,128L1440,0L1380,0C1320,0,1200,0,1080,0C960,0,840,0,720,0C600,0,480,0,360,0C240,0,120,0,60,0L0,0Z">
+            </path>
+        </svg>
+    </div>
+
+    <div class="contact">
+        <h1>Contact me</h1>
+        <div class="c-contact">
+            <div class="kiri">
+                <h1>Mari berbicara</h1>
+                <p>tanya saja lewat kontak di bawah ini</p>
+                <div class="kontak">
+                    <a href=""><i class="ri-mail-line"></i> mfabregasigas@gmail.com</a>
+                    <a href=""><i class="ri-phone-line"></i> 085819542978</a>
+                </div>
+            </div>
+            <div class="kanan">
+                <div class="input">
+                    <div class="group">
+                        <label for="f-name">Nama</label>
+                        <input type="text" name="nama" id="nama">
+                    </div>
+                    <div class="group">
+                        <label for="m-email">masukan email</label>
+                        <input type="email" name="email" id="email">
+                    </div>
+                    <div class="group">
+                        <label for="no.hp">masukan no hp</label>
+                        <input type="tel" name="no-telepon" id="no-telepon">
+                    </div>
+                </div>
+                <label for="pesan">masukan pesan</label>
+                <textarea name="pesan" id="pesan" placeholder="masukan pesan"></textarea>
+                <button type="submit">kirim</button>
+            </div>
+        </div>
+        <svg class="blob3" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+            <path fill="#6b6868" fill-opacity="1"
+                d="M0,224L60,234.7C120,245,240,267,360,245.3C480,224,600,160,720,144C840,128,960,160,1080,165.3C1200,171,1320,149,1380,138.7L1440,128L1440,0L1380,0C1320,0,1200,0,1080,0C960,0,840,0,720,0C600,0,480,0,360,0C240,0,120,0,60,0L0,0Z">
+            </path>
+        </svg>
+    </div>
 </body>
