--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 
         <ul>
             <li><a href="#">home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Skill</a></li>
-            <li><a href="#">Portfolio</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="#">product</a></li>
+            <li><a href="#">service</a></li>
+            <li><a href="#">gallery</a></li>
+            <li><a href="#">about</a></li>
         </ul>
 
         <div class="menu-toggle">
@@ -81,7 +81,7 @@
                 d="M0,224L60,234.7C120,245,240,267,360,245.3C480,224,600,160,720,144C840,128,960,160,1080,165.3C1200,171,1320,149,1380,138.7L1440,128L1440,0L1380,0C1320,0,1200,0,1080,0C960,0,840,0,720,0C600,0,480,0,360,0C240,0,120,0,60,0L0,0Z">
             </path>
         </svg>
-        <div class="skills-content">
+        <div class="skills-content" data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine">
             <div class="bahasa">
                 <h2>Skills</h2>
                 <i class="ri-javascript-fill"></i>
@@ -120,7 +120,7 @@
             </div>
         </div>
 
-        <div class="soft-content">
+        <div class="soft-content" data-aos="fade-left">
             <div class="brain">
                 <h2>Softskill</h2>
                 <i class="ri-brain-fill"></i>
@@ -205,7 +205,7 @@
     <div class="contact">
         <h1>Contact me</h1>
         <div class="c-contact">
-            <div class="kiri">
+            <div class="kiri" data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine">
                 <h1>Mari berbicara</h1>
                 <p>tanya saja lewat kontak di bawah ini</p>
                 <div class="kontak">
@@ -239,4 +239,39 @@
             </path>
         </svg>
     </div>
+
+    <footer>
+        <div class="footer">
+            <div class="sosmed">
+                <h1>Sosmed</h1>
+                <ul>
+                    <li><a href=""><i class="ri-instagram-fill"></i></a></li>
+                    <li><a href=""><i class="ri-facebook-circle-fill"></i></a></li>
+                    <li><a href=""><i class="ri-github-fill"></i></a></li>
+                </ul>
+            </div>
+            <div class="footer-list">
+                <ul>
+                    <li><a href="#">home</a></li>
+                    <li><a href="#about">about</a></li>
+                    <li><a href="#skills">skills</a></li>
+                    <li><a href="#contact">contact</a></li>
+                </ul>
+            </div>
+            <div class="footer-contact">
+                <a href=""><i class="ri-mail-line"></i> mfabregasigas@gmail.com</a>
+                <a href=""><i class="ri-phone-line"></i> 085819542978</a>
+            </div>
+        </div>
+
+        <div class="footer-text">
+            <p>Desain by M.Fabregas G.S</p>
+        </div>
+    </footer>
+
+    <script src="script.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
