--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                     <a href=""><i class="ri-phone-line"></i> 085819542978</a>
                 </div>
             </div>
-            <div class="kanan">
+            <div class="kanan" data-aos="fade-left">
                 <div class="input">
                     <div class="group">
                         <label for="f-name">Nama</label>
