--- a/index.html
+++ b/index.html
@@ -165,33 +165,35 @@
             <div class="card">
                 <div class="sc"><img src="Screenshot 2023-12-14 183757.png" alt=""></div>
                 <div class="text">
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati voluptate placeat, explicabo
-                        ullam nihil deserunt in rerum tenetur sapiente distinctio? Eum iste facilis nisi autem deserunt
-                        animi repellendus adipisci possimus!</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, sint voluptatum dignissimos,
+                        debitis sed omnis quae maxime tenetur autem corrupti libero itaque harum modi at, blanditiis
+                        dicta assumenda pariatur sunt vero quisquam distinctio totam. A minus repellendus labore
+                        eligendi quaerat?</p>
                 </div>
             </div>
             <div class="card">
                 <div class="sc"><img src="Screenshot 2023-12-14 183757.png" alt=""></div>
                 <div class="text">
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati voluptate placeat, explicabo
-                        ullam nihil deserunt in rerum tenetur sapiente distinctio? Eum iste facilis nisi autem deserunt
-                        animi repellendus adipisci possimus!</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta porro tempora dolores officia
+                        ipsam ad architecto? Necessitatibus perferendis numquam sint beatae culpa eum totam commodi?
+                        Rerum ex quo reiciendis, repellendus voluptate, aut quod ducimus eaque, id labore soluta
+                        temporibus in.</p>
                 </div>
             </div>
             <div class="card">
                 <div class="sc"><img src="Screenshot 2023-12-14 183757.png" alt=""></div>
                 <div class="text">
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati voluptate placeat, explicabo
-                        ullam nihil deserunt in rerum tenetur sapiente distinctio? Eum iste facilis nisi autem deserunt
-                        animi repellendus adipisci possimus!</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel ex reiciendis quam, animi culpa nam
+                        dolores tempore exercitationem ut quidem minus itaque voluptas error magni atque obcaecati
+                        nostrum? Nam impedit eius autem laborum suscipit possimus quaerat sint rerum. Ab, optio!</p>
                 </div>
             </div>
             <div class="card">
                 <div class="sc"><img src="Screenshot 2023-12-14 183757.png" alt=""></div>
                 <div class="text">
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati voluptate placeat, explicabo
-                        ullam nihil deserunt in rerum tenetur sapiente distinctio? Eum iste facilis nisi autem deserunt
-                        animi repellendus adipisci possimus!</p>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusamus eos ex quam, enim iusto
+                        recusandae debitis similique harum rerum? Dolorem non quo itaque laudantium, magni dolor dolore
+                        culpa, aliquam quis nobis mollitia corporis iusto deserunt. Culpa debitis dolorem quia quo.</p>
                 </div>
             </div>
         </div>
