--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 
         <ul>
             <li><a href="#">home</a></li>
-            <li><a href="#">product</a></li>
-            <li><a href="#">service</a></li>
-            <li><a href="#">gallery</a></li>
-            <li><a href="#">about</a></li>
+            <li><a href="#about">about</a></li>
+            <li><a href="#skills">skill</a></li>
+            <li><a href="#portfolio">portfolio</a></li>
+            <li><a href="#contact">contact</a></li>
         </ul>
 
         <div class="menu-toggle">
@@ -53,7 +53,7 @@
         </svg>
     </div>
 
-    <div class="about">
+    <div class="about" id="about">
         <svg class="marker" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
             <path fill="#000000"
                 d="M14.7,-26.2C21.3,-21.6,30.4,-22.2,36.9,-18.7C43.4,-15.2,47.2,-7.6,49.6,1.4C52,10.4,52.9,20.7,46.7,24.7C40.4,28.6,27,26.1,18.1,26.4C9.1,26.7,4.5,29.7,-4.7,37.8C-13.9,45.9,-27.8,59,-31.3,55.6C-34.7,52.1,-27.8,32.1,-31.3,20C-34.8,8,-48.8,4,-53.5,-2.7C-58.2,-9.4,-53.6,-18.9,-44.6,-21.3C-35.5,-23.8,-22,-19.3,-13.9,-23C-5.7,-26.7,-2.8,-38.7,0.6,-39.7C4,-40.7,8.1,-30.9,14.7,-26.2Z"
@@ -159,7 +159,7 @@
     </section>
 
 
-    <div class="portfolio">
+    <div class="portfolio" id="portfolio">
         <h1>portfolio</h1>
         <div class="portfolio-content">
             <div class="card">
@@ -204,42 +204,44 @@
         </svg>
     </div>
 
-    <div class="contact">
-        <h1>Contact me</h1>
-        <div class="c-contact">
-            <div class="kiri" data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine">
-                <h1>Mari berbicara</h1>
-                <p>tanya saja lewat kontak di bawah ini</p>
-                <div class="kontak">
-                    <a href=""><i class="ri-mail-line"></i> mfabregasigas@gmail.com</a>
-                    <a href=""><i class="ri-phone-line"></i> 085819542978</a>
-                </div>
-            </div>
-            <div class="kanan" data-aos="fade-left">
-                <div class="input">
-                    <div class="group">
-                        <label for="f-name">Nama</label>
-                        <input type="text" name="nama" id="nama">
-                    </div>
-                    <div class="group">
-                        <label for="m-email">masukan email</label>
-                        <input type="email" name="email" id="email">
-                    </div>
-                    <div class="group">
-                        <label for="no.hp">masukan no hp</label>
-                        <input type="tel" name="no-telepon" id="no-telepon">
+    <form name="contactme">
+        <div class="contact" id="contact">
+            <h1>Contact me</h1>
+            <div class="c-contact">
+                <div class="kiri" data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine">
+                    <h1>Mari berbicara</h1>
+                    <p>tanya saja lewat kontak di bawah ini</p>
+                    <div class="kontak">
+                        <a href=""><i class="ri-mail-line"></i> mfabregasigas@gmail.com</a>
+                        <a href=""><i class="ri-phone-line"></i> 085819542978</a>
                     </div>
                 </div>
-                <label for="pesan">masukan pesan</label>
-                <textarea name="pesan" id="pesan" placeholder="masukan pesan"></textarea>
-                <button type="submit">kirim</button>
-            </div>
-        </div>
-        <svg class="blob3" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-            <path fill="#6b6868" fill-opacity="1"
-                d="M0,224L60,234.7C120,245,240,267,360,245.3C480,224,600,160,720,144C840,128,960,160,1080,165.3C1200,171,1320,149,1380,138.7L1440,128L1440,0L1380,0C1320,0,1200,0,1080,0C960,0,840,0,720,0C600,0,480,0,360,0C240,0,120,0,60,0L0,0Z">
-            </path>
-        </svg>
+                <div class="kanan" data-aos="fade-left">
+                    <div class="input">
+                        <div class="group">
+                            <label for="f-name">Nama</label>
+                            <input type="text" name="nama" id="nama" name="nama">
+                        </div>
+                        <div class="group">
+                            <label for="m-email">masukan email</label>
+                            <input type="email" name="email" id="email" name="email">
+                        </div>
+                        <div class="group">
+                            <label for="no.hp">masukan no hp</label>
+                            <input type="tel" name="no-telepon" id="nohp" name="no-telepon">
+                        </div>
+                    </div>
+                    <label for="pesan">masukan pesan</label>
+                    <textarea name="pesan" id="pesan" placeholder="masukan pesan" name="pesan"></textarea>
+                    <button type="submit">kirim</button>
+                </div>
+    </form>
+    </div>
+    <svg class="blob3" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <path fill="#6b6868" fill-opacity="1"
+            d="M0,224L60,234.7C120,245,240,267,360,245.3C480,224,600,160,720,144C840,128,960,160,1080,165.3C1200,171,1320,149,1380,138.7L1440,128L1440,0L1380,0C1320,0,1200,0,1080,0C960,0,840,0,720,0C600,0,480,0,360,0C240,0,120,0,60,0L0,0Z">
+        </path>
+    </svg>
     </div>
 
     <footer>
@@ -275,5 +277,18 @@
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
         AOS.init();
+    </script>
+
+
+    <script>
+        const scriptURL = 'https://script.google.com/macros/s/AKfycbyM0MOJM8jBlznwhk8uzO_EO2qMuW1VwrWZ6aayUg6JxnFLzujJFuxRuHrAUXUWD9b5yw/exec'
+        const form = document.forms['contactme']
+
+        form.addEventListener('submit', e => {
+            e.preventDefault()
+            fetch(scriptURL, { method: 'POST', body: new FormData(form) })
+                .then(response => console.log('Success!', response))
+                .catch(error => console.error('Error!', error.message))
+        })
     </script>
 </body>
