--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
         </div>
     </nav>
 
+
+    <!--home me-->
     <div class="container">
         <div class="perkenalan">
             <h1>I'M M.Fabregas G.S</h1>
@@ -53,6 +55,8 @@
         </svg>
     </div>
 
+
+    <!--about me-->
     <div class="about" id="about">
         <svg class="marker" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
             <path fill="#000000"
@@ -71,6 +75,7 @@
             </div>
         </div>
     </div>
+
 
 
     <!--skill-->
@@ -159,6 +164,7 @@
     </section>
 
 
+    <!--portfolio-->
     <div class="portfolio" id="portfolio">
         <h1>portfolio</h1>
         <div class="portfolio-content">
@@ -204,6 +210,8 @@
         </svg>
     </div>
 
+
+    <!--contactme-->
     <form name="contactme">
         <div class="contact" id="contact">
             <h1>Contact me</h1>
@@ -233,16 +241,19 @@
                     </div>
                     <label for="pesan">masukan pesan</label>
                     <textarea name="pesan" id="pesan" placeholder="masukan pesan" name="pesan"></textarea>
-                    <button type="submit">kirim</button>
+                    <button type="submit" onclick="alert('pesan telah tersampaikan')">kirim</button>
+
                 </div>
+            </div>
+            <svg class="blob3" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+                <path fill="#6b6868" fill-opacity="1"
+                    d="M0,224L60,234.7C120,245,240,267,360,245.3C480,224,600,160,720,144C840,128,960,160,1080,165.3C1200,171,1320,149,1380,138.7L1440,128L1440,0L1380,0C1320,0,1200,0,1080,0C960,0,840,0,720,0C600,0,480,0,360,0C240,0,120,0,60,0L0,0Z">
+                </path>
+            </svg>
+        </div>
     </form>
-    </div>
-    <svg class="blob3" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-        <path fill="#6b6868" fill-opacity="1"
-            d="M0,224L60,234.7C120,245,240,267,360,245.3C480,224,600,160,720,144C840,128,960,160,1080,165.3C1200,171,1320,149,1380,138.7L1440,128L1440,0L1380,0C1320,0,1200,0,1080,0C960,0,840,0,720,0C600,0,480,0,360,0C240,0,120,0,60,0L0,0Z">
-        </path>
-    </svg>
-    </div>
+
+
 
     <footer>
         <div class="footer">
@@ -278,7 +289,6 @@
     <script>
         AOS.init();
     </script>
-
 
     <script>
         const scriptURL = 'https://script.google.com/macros/s/AKfycbyM0MOJM8jBlznwhk8uzO_EO2qMuW1VwrWZ6aayUg6JxnFLzujJFuxRuHrAUXUWD9b5yw/exec'
