--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <img src="foto.jpg" alt="">
         </div>
         <svg class="blob" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-            <path fill="#ff5500" fill-opacity="1"
+            <path fill="#800080" fill-opacity="1"
                 d="M0,192L21.8,186.7C43.6,181,87,171,131,160C174.5,149,218,139,262,149.3C305.5,160,349,192,393,186.7C436.4,181,480,139,524,154.7C567.3,171,611,245,655,272C698.2,299,742,277,785,266.7C829.1,256,873,256,916,256C960,256,1004,256,1047,245.3C1090.9,235,1135,213,1178,181.3C1221.8,149,1265,107,1309,112C1352.7,117,1396,171,1418,197.3L1440,224L1440,320L1418.2,320C1396.4,320,1353,320,1309,320C1265.5,320,1222,320,1178,320C1134.5,320,1091,320,1047,320C1003.6,320,960,320,916,320C872.7,320,829,320,785,320C741.8,320,698,320,655,320C610.9,320,567,320,524,320C480,320,436,320,393,320C349.1,320,305,320,262,320C218.2,320,175,320,131,320C87.3,320,44,320,22,320L0,320Z">
             </path>
         </svg>
@@ -82,7 +82,7 @@
 
     <section class="skills" id="skills">
         <svg class="blob1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-            <path fill=" #ff5500" fill-opacity="1"
+            <path fill=" #ffa500" fill-opacity="1"
                 d="M0,224L60,234.7C120,245,240,267,360,245.3C480,224,600,160,720,144C840,128,960,160,1080,165.3C1200,171,1320,149,1380,138.7L1440,128L1440,0L1380,0C1320,0,1200,0,1080,0C960,0,840,0,720,0C600,0,480,0,360,0C240,0,120,0,60,0L0,0Z">
             </path>
         </svg>
@@ -184,22 +184,6 @@
                         ipsam ad architecto? Necessitatibus perferendis numquam sint beatae culpa eum totam commodi?
                         Rerum ex quo reiciendis, repellendus voluptate, aut quod ducimus eaque, id labore soluta
                         temporibus in.</p>
-                </div>
-            </div>
-            <div class="card">
-                <div class="sc"><img src="Screenshot 2023-12-14 183757.png" alt=""></div>
-                <div class="text">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel ex reiciendis quam, animi culpa nam
-                        dolores tempore exercitationem ut quidem minus itaque voluptas error magni atque obcaecati
-                        nostrum? Nam impedit eius autem laborum suscipit possimus quaerat sint rerum. Ab, optio!</p>
-                </div>
-            </div>
-            <div class="card">
-                <div class="sc"><img src="Screenshot 2023-12-14 183757.png" alt=""></div>
-                <div class="text">
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusamus eos ex quam, enim iusto
-                        recusandae debitis similique harum rerum? Dolorem non quo itaque laudantium, magni dolor dolore
-                        culpa, aliquam quis nobis mollitia corporis iusto deserunt. Culpa debitis dolorem quia quo.</p>
                 </div>
             </div>
         </div>
