--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <p>Perkenalkan nama saya muhammad fabregas saya mahasiswa unpas </p>
             <div class="icon">
                 <a href="#"><i class="ri-facebook-circle-line"></i></a>
-                <a href="#"><i class="ri-instagram-line"></i></a>
+                <a href="#"><i class="ri-handbag-fill"></i></a>
                 <a href="#"><i class="ri-github-fill"></i></a>
                 <a href="#"><i class="ri-whatsapp-line"></i></a>
             </div>
